--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <title>PB | Loading</title>
-  <meta name="keywords" content="Unblocked game site, Unblocker, proxy, games, no ads, free games" />
+  <meta name="keywords" content="" />
   <meta name="author" content="xdevman1" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
